# bit-by-bit

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: gen.rs  it_compiles.rs  test.rs
